--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang ="en">
     <head>
-        <title>我的第一个网站</title>
+        <title>MY widgets</title>
     </head>
+
     <body>
-        <p>
-        欢迎来到我的世界
-        </p>
+        <h1>my widgets</h1>
+        <p>my widgets are the beat in the land</p>
+
+        <h2>widget features</h2>
+        <p>if i had any features</p>
+
+        <h3>compparisons</h3>
+        <p>here,i woubld talk about my wiget</p>
+
+        <h3>comparions</h3>
+        <p>here ,i would </p>
     </body>
 </html>
